Fixed page being too wide and bad alignment of particles to screen
The page was wider than the screen - you could scroll to the right. Not
good. Also, the particle background wasn’t aligned to the frame, it was
pushed to the right with a weird black margin on the left.

--- a/style.scss
+++ b/style.scss
@@ -48,13 +48,14 @@ h1 {
 //////////
 #hero {
   height: 100vh;
-  width: 100vw;
+  width: 100%; // keeps the page from being wider than the screen
   background-color: black;
 }
 
 #particles-js {
-  height: 100%;
-  width: 100%;
+  left: 0; // removes the odd left margin that was being created
+  height: 100vh;
+  width: 100vw;
   position: fixed;
 }
 
